--- a/index.html
+++ b/index.html
@@ -428,130 +428,154 @@
     </section><!-- /Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3">
-            <div class="section-title" data-aos="fade-right">
-              <h5>Testimonials</h5>
-              <h3>Positive Feedback</h3>
-              <p class="text-start">
-                Semua testimonial yang ada disini adalah member yang mengikuti
-                kelas online, offline, anak dan juga program khusus korporasi,
-                silahkan check real feedbacknya di google review kami
-              </p>
-              <div class="text-center text-md-start" style="margin-top: 20px">
-                <a target="__blank"
-                  href="https://www.google.com/maps/place/Dialogika+Kelas+Public+Speaking/@-7.7552251,110.3760129,17z/data=!4m18!1m9!3m8!1s0x2e7a597ab489149d:0x9306a2474322de7c!2sDialogika+Kelas+Public+Speaking!8m2!3d-7.7552251!4d110.3785878!9m1!1b1!16s%2Fg%2F11qyjgv8c8!3m7!1s0x2e7a597ab489149d:0x9306a2474322de7c!8m2!3d-7.7552251!4d110.3785878!9m1!1b1!16s%2Fg%2F11qyjgv8c8?entry=ttu">Google
-                  Review</a>
+<section id="testimonials" class="testimonials">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-3">
+              <div class="section-title" data-aos="fade-right">
+                <h5>Testimonials</h5>
+                <h3>Positive Feedback</h3>
+                <p class="text-start">
+                  Semua testimonial yang ada disini adalah member yang mengikuti
+                  kelas online, offline, anak dan juga program khusus korporasi,
+                  silahkan check real feedbacknya di google review kami
+                </p>
+                <div class="text-center text-md-start" style="margin-top: 20px">
+                  <a
+                    target="__blank"
+                    href="https://www.google.com/maps/place/Dialogika+Kelas+Public+Speaking/@-7.7552251,110.3760129,17z/data=!4m18!1m9!3m8!1s0x2e7a597ab489149d:0x9306a2474322de7c!2sDialogika+Kelas+Public+Speaking!8m2!3d-7.7552251!4d110.3785878!9m1!1b1!16s%2Fg%2F11qyjgv8c8!3m7!1s0x2e7a597ab489149d:0x9306a2474322de7c!8m2!3d-7.7552251!4d110.3785878!9m1!1b1!16s%2Fg%2F11qyjgv8c8?entry=ttu"
+                    >Google Review</a
+                  >
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-lg-9">
-            <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <div class="testimonial-wrap">
-                    <div class="testimonial-item">
-                      <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjWOYa8kdS8RkKxKvszftDzypIIlTBG1FC5NKwofV63t6zA8j9f1=w66-h66-p-rp-mo-br100"
-                        class="testimonial-img" alt="" />
-                      <h3>Dewi Apriliani</h3>
-                      <h4>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                      </h4>
-                      <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        My children have just finished taking an offline public speaking class at Dialogica Bintaro. So happy to have discovered Dialogica. Ka Pitta as a mentor is very professional and can understand the dynamics of the world of teenagers. The children's progress is very good, especially in increasing their self-confidence and courage to speak and express ideas/opinions well. In the current era of the independent curriculum, I think soft skills such as public speaking are really needed by children, because they are required to learn actively, explore, discuss and present the results of their learning. In summary, the children enjoy studying here & I as a parent feel satisfied with the children's progress. Thank you Dialogica & team 😊<i
-                          class="bx bxs-quote-alt-right quote-icon-right"></i>
-                      </p>
+            <div class="col-lg-9">
+              <div
+                class="testimonials-slider swiper"
+                data-aos="fade-up"
+                data-aos-delay="100"
+              >
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <div class="testimonial-wrap">
+                      <div class="testimonial-item">
+                        <img
+                          src="https://lh3.googleusercontent.com/a-/ALV-UjVu5lm1DwyAkqpjlFOVVALKFAuRm7mT2bweLDJKdzSCrEYwL-lW=w75-h75-p-rp-mo-br100"
+                          class="testimonial-img"
+                          alt=""
+                        />
+                        <h3>Arya Y Darmawan</h3>
+                        <h4>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                        </h4>
+                        <p>
+                          <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                          The public speaking class provided practical techniques to enhance confidence and communication skills. The instructor was engaging, offering personalized feedback. Overall, the course was well-structured, equipping participants with essential presentation tools. 
+                          <i
+                            class="bx bxs-quote-alt-right quote-icon-right"
+                          ></i>
+                        </p>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <!-- End testimonial item -->
+                  <!-- End testimonial item -->
 
-                <div class="swiper-slide">
-                  <div class="testimonial-wrap">
-                    <div class="testimonial-item">
-                      <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjXSYH6lkcGCoaONDy13X9o_RHB0ZJ2uYHT16Ydrlq_K2jiolkQ=w66-h66-p-rp-mo-br100"
-                        class="testimonial-img" alt="" />
-                      <h3>Lebre Adrianto</h3>
-                      <h4>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                      </h4>
-                      <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Im very interse with the course and enjoy event the course begin until end… Thx Dialogika <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                      </p>
+                  <div class="swiper-slide">
+                    <div class="testimonial-wrap">
+                      <div class="testimonial-item">
+                        <img
+                          src="https://lh3.googleusercontent.com/a-/ALV-UjXSYH6lkcGCoaONDy13X9o_RHB0ZJ2uYHT16Ydrlq_K2jiolkQ=w75-h75-p-rp-mo-br100"
+                          class="testimonial-img"
+                          alt=""
+                        />
+                        <h3>Lebre Adrianto</h3>
+                        <h4>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                        </h4>
+                        <p>
+                          <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                          Im very interse with the course and enjoy event the course begin until end… Thx Dialogika
+                          <i
+                            class="bx bxs-quote-alt-right quote-icon-right"
+                          ></i>
+                        </p>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <!-- End testimonial item -->
+                  <!-- End testimonial item -->
 
-                <div class="swiper-slide">
-                  <div class="testimonial-wrap">
-                    <div class="testimonial-item">
-                      <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjUZ7wE9u9V6MJLK-Mic-0dbYeLR4qDP70ZJgz9KJ60biRg8pJ_w=w66-h66-p-rp-mo-br100"
-                        class="testimonial-img" alt="" />
-                      <h3>Khoirun Nisa Alfaini</h3>
-                      <h4>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                      </h4>
-                      <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        The class can be a safe space for learning public speaking. Not only did you get the material, but you also got to practice directly with other friends. The instructors are also open to discussions, get lots of tips related to public speaking.<i
-                          class="bx bxs-quote-alt-right quote-icon-right"></i>
-                      </p>
+                  <div class="swiper-slide">
+                    <div class="testimonial-wrap">
+                      <div class="testimonial-item">
+                        <img
+                          src="https://lh3.googleusercontent.com/a-/ALV-UjWlyAZO_F9m_khwTL2wjW_8GMtIJEsyJ62rerio5swD5tjBwEV8=w75-h75-p-rp-mo-br100"
+                          class="testimonial-img"
+                          alt=""
+                        />
+                        <h3>Anam Axel</h3>
+                        <h4>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                        </h4>
+                        <p>
+                          <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                          Worth it! 🔥 …
+                          <i
+                            class="bx bxs-quote-alt-right quote-icon-right"
+                          ></i>
+                        </p>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <!-- End testimonial item -->
+                  <!-- End testimonial item -->
 
-                <div class="swiper-slide">
-                  <div class="testimonial-wrap">
-                    <div class="testimonial-item">
-                      <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjUdvvXYFkGraSQtOEEGisFaOq_Tu042Pl69lgD9M_LW3zLO4cG0=w66-h66-p-rp-mo-br100"
-                        class="testimonial-img" alt="" />
-
-                      <h3>Fabian Rafi Ridwan</h3>
-                      <h4>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                      </h4>
-                      <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Keren sih dengan mengikuti kelas dialogika saya bisa mendapatkan pengalaman baru dan menjadikan saya sebagai pribadi yang lebih confidence. Tetap semangat bagi kakak"nya 👍🏻👍🏻 …<i
-                          class="bx bxs-quote-alt-right quote-icon-right"></i>
-                      </p>
+                  <div class="swiper-slide">
+                    <div class="testimonial-wrap">
+                      <div class="testimonial-item">
+                        <img
+                          src="https://lh3.googleusercontent.com/a-/ALV-UjXdLXa4DjiqQXM-3Xjc7Wu_5P1IS0klsTQcC-RVDBtBEgy7X_k4=w75-h75-p-rp-mo-br100"
+                          class="testimonial-img"
+                          alt=""
+                        />
+                        <h3>Hatta Saifa</h3>
+                        <h4>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                          <i class="bi bi-star-fill"></i>
+                        </h4>
+                        <p>
+                          <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                          Pub Speaking Class yang bisa dihadiri offline di Jogja, saya menjadi peserta kelas reguler di sini dan pengalaman saya selama menjadi peserta kelas alhamdulillah dipertemukan dengan kak vanny as a coach/mentor yang menyenangkan dan selalu antusias dalam berbagi ilmunya sebagai seorang expertise pub speaker. <span class="dots">...</span><span class="readMore"> Read More &raquo;</span><span class="moreText">Para pegawai yang ada di daheim pun  ramah-ramah juga dalam menyambut tiap peserta kelas. Overall menyenangkan dan membantu juga dalam memperdalam ilmu pub speaking dengan guarantee nya yang bisa tetap mengikuti kelas meskipun sudah dinyatakan lulus.
+                          Sedikit saran kalau ada yg perlu diperbaiki adalah mungkin pengadaaan kelas terpisah dengan ruang kerja para karyawan intern supaya para peserta kelas bisa lebih maksimal dalam menyerap ilmu yang disampaikan, juga responsibilitas admin kelas dalam menanggapi peserta kelas bisa lebih ditingkatkan, but overall sudah sangat cukup membantuu
+                          Thanks and good job buat kak vanny dan kaka-kaka Dialogika semuanyaa</span><span class="readLess"> &laquo; Read Less</span>
+                          <i
+                            class="bx bxs-quote-alt-right quote-icon-right"
+                          ></i>
+                        </p>
+                      </div>
                     </div>
                   </div>
+                  <!-- End testimonial item -->
                 </div>
-                <!-- End testimonial item -->
+                <div class="swiper-pagination"></div>
               </div>
-              <div class="swiper-pagination"></div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
     <!-- End Testimonials Section -->
 
     <!-- ======= Mentor Section ======= -->
