--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Todays Promo! ✨🎊</h2>
+        <h2>Todays Promo! ✨🤔😲</h2>
         <p>Jangan lewatkan promo kelas dan info-info event dari Dialogika</p>
       </div><!-- End Section Title -->
 
