--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Todays Promo! ✨🤔😲</h2>
+        <h2>Today’s Promo! ✨🤩🔥</h2>
         <p>Jangan lewatkan promo kelas dan info-info event dari Dialogika</p>
       </div><!-- End Section Title -->
 
@@ -346,7 +346,7 @@
             <div class="service-item item-cyan position-relative">
               <i class="bi bi-laptop icon"></i>
               <div>
-                <h3>Promo Spesial Kelas Online! 💡</h3>
+                <h3>Promo Spesial Kelas Online! 🚀</h3>
                 <p>Nikmati kelas bersama mentor professional dengan peserta terbatas selama sebulan! Dengan garansi
                   pasti bisa!</p>
                 <a href="https://api.whatsapp.com/send?phone=6285162992597&text=Haloo%20kak%20saya%20tertarik%20dengan%20*PROMO*%20program%20kelas%20online%20*via%20zoom*%2C%20boleh%20diinfokan%20lebih%20lanjut%0A%0A%0A%60%60%60dari%20ig%2Ftiktok%2Fx%2Ffb%60%60%60"
@@ -359,7 +359,7 @@
             <div class="service-item item-orange position-relative">
               <i class="bi bi-people-fill icon"></i>
               <div>
-                <h3>Hampir Terisi Penuh (Kelas Offline)❗</h3>
+                <h3>Kelas Offline Hampir Penuh! 🚨</h3>
                 <p>Dibimbing secara langsung dari ahlinya, fokus latihan dan setiap kali latihan selalu ada evaluasi
                   hingga mahir</p>
                 <a href="https://api.whatsapp.com/send?phone=6285162992597&text=Haloo%20kak%20apakah%20seat%20kelas%20offline-nya%20masih%20ada%3F%20boleh%20diinfokan%20lebih%20lanjut%0A%0A%0A%60%60%60dari%20ig%2Ftiktok%2Fx%2Ffb%60%60%60"
@@ -488,11 +488,11 @@
                     <div class="testimonial-wrap">
                       <div class="testimonial-item">
                         <img
-                          src="https://lh3.googleusercontent.com/a-/ALV-UjXSYH6lkcGCoaONDy13X9o_RHB0ZJ2uYHT16Ydrlq_K2jiolkQ=w75-h75-p-rp-mo-br100"
+                          src="https://lh3.googleusercontent.com/a-/ALV-UjXBTZz0kVrPeSzUevY_NohxKtq6ys-dACVN1_XV1ve50kZKsT0c=w120-h120-p-rp-mo-br100"
                           class="testimonial-img"
                           alt=""
                         />
-                        <h3>Lebre Adrianto</h3>
+                        <h3>Uwa pertiwi</h3>
                         <h4>
                           <i class="bi bi-star-fill"></i>
                           <i class="bi bi-star-fill"></i>
@@ -502,7 +502,7 @@
                         </h4>
                         <p>
                           <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                          Im very interse with the course and enjoy event the course begin until end… Thx Dialogika
+                          The material used is very relevant to everyday social life. The mentors are also very good and the way they present it is very easy to understand. Continued success, dialog, thank you for the experience!
                           <i
                             class="bx bxs-quote-alt-right quote-icon-right"
                           ></i>
@@ -516,11 +516,11 @@
                     <div class="testimonial-wrap">
                       <div class="testimonial-item">
                         <img
-                          src="https://lh3.googleusercontent.com/a-/ALV-UjWlyAZO_F9m_khwTL2wjW_8GMtIJEsyJ62rerio5swD5tjBwEV8=w75-h75-p-rp-mo-br100"
+                          src="https://lh3.googleusercontent.com/a-/ALV-UjX58t0zlD0IvxW_683Svegixorhs-y9RUhIExZShYQ6K6v-Oec=w120-h120-p-rp-mo-br100"
                           class="testimonial-img"
                           alt=""
                         />
-                        <h3>Anam Axel</h3>
+                        <h3>Lia Na</h3>
                         <h4>
                           <i class="bi bi-star-fill"></i>
                           <i class="bi bi-star-fill"></i>
@@ -530,7 +530,7 @@
                         </h4>
                         <p>
                           <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                          Worth it! 🔥 …
+                          Alhamdulillah dengan adanya public speaking DIALOGIKA sangat bermanfaat sekali bagi sya , yg awalnya tidak bisa apa² , yg awalnya minder, malu, gk pd, takut dan sebagainya, alhamdulillah berkat ke tlatenan dri kk mentor dialogika , dikit
                           <i
                             class="bx bxs-quote-alt-right quote-icon-right"
                           ></i>
