--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         <section class="section hero"></section>
       </div>
       <div class="image-container">
-        <img src="assets/img/window1.webp" alt="image">
+        <img src="assets/img/window2.webp" alt="image">
       </div>
     </div>
     <!-- Scrolling Zoom -->
@@ -428,154 +428,148 @@
     </section><!-- /Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
-<section id="testimonials" class="testimonials">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-3">
-              <div class="section-title" data-aos="fade-right">
-                <h5>Testimonials</h5>
-                <h3>Positive Feedback</h3>
-                <p class="text-start">
-                  Semua testimonial yang ada disini adalah member yang mengikuti
-                  kelas online, offline, anak dan juga program khusus korporasi,
-                  silahkan check real feedbacknya di google review kami
-                </p>
-                <div class="text-center text-md-start" style="margin-top: 20px">
-                  <a
-                    target="__blank"
-                    href="https://www.google.com/maps/place/Dialogika+Kelas+Public+Speaking/@-7.7552251,110.3760129,17z/data=!4m18!1m9!3m8!1s0x2e7a597ab489149d:0x9306a2474322de7c!2sDialogika+Kelas+Public+Speaking!8m2!3d-7.7552251!4d110.3785878!9m1!1b1!16s%2Fg%2F11qyjgv8c8!3m7!1s0x2e7a597ab489149d:0x9306a2474322de7c!8m2!3d-7.7552251!4d110.3785878!9m1!1b1!16s%2Fg%2F11qyjgv8c8?entry=ttu"
-                    >Google Review</a
-                  >
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-9">
-              <div
-                class="testimonials-slider swiper"
-                data-aos="fade-up"
-                data-aos-delay="100"
-              >
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">
-                    <div class="testimonial-wrap">
-                      <div class="testimonial-item">
-                        <img
-                          src="https://lh3.googleusercontent.com/a-/ALV-UjVu5lm1DwyAkqpjlFOVVALKFAuRm7mT2bweLDJKdzSCrEYwL-lW=w75-h75-p-rp-mo-br100"
-                          class="testimonial-img"
-                          alt=""
-                        />
-                        <h3>Arya Y Darmawan</h3>
-                        <h4>
-                          <i class="bi bi-star-fill"></i>
-                          <i class="bi bi-star-fill"></i>
-                          <i class="bi bi-star-fill"></i>
-                          <i class="bi bi-star-fill"></i>
-                          <i class="bi bi-star-fill"></i>
-                        </h4>
-                        <p>
-                          <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                          The public speaking class provided practical techniques to enhance confidence and communication skills. The instructor was engaging, offering personalized feedback. Overall, the course was well-structured, equipping participants with essential presentation tools. 
-                          <i
-                            class="bx bxs-quote-alt-right quote-icon-right"
-                          ></i>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                  <!-- End testimonial item -->
-
-                  <div class="swiper-slide">
-                    <div class="testimonial-wrap">
-                      <div class="testimonial-item">
-                        <img
-                          src="https://lh3.googleusercontent.com/a-/ALV-UjXBTZz0kVrPeSzUevY_NohxKtq6ys-dACVN1_XV1ve50kZKsT0c=w120-h120-p-rp-mo-br100"
-                          class="testimonial-img"
-                          alt=""
-                        />
-                        <h3>Uwa pertiwi</h3>
-                        <h4>
-                          <i class="bi bi-star-fill"></i>
-                          <i class="bi bi-star-fill"></i>
-                          <i class="bi bi-star-fill"></i>
-                          <i class="bi bi-star-fill"></i>
-                          <i class="bi bi-star-fill"></i>
-                        </h4>
-                        <p>
-                          <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                          The material used is very relevant to everyday social life. The mentors are also very good and the way they present it is very easy to understand. Continued success, dialog, thank you for the experience!
-                          <i
-                            class="bx bxs-quote-alt-right quote-icon-right"
-                          ></i>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                  <!-- End testimonial item -->
-
-                  <div class="swiper-slide">
-                    <div class="testimonial-wrap">
-                      <div class="testimonial-item">
-                        <img
-                          src="https://lh3.googleusercontent.com/a-/ALV-UjX58t0zlD0IvxW_683Svegixorhs-y9RUhIExZShYQ6K6v-Oec=w120-h120-p-rp-mo-br100"
-                          class="testimonial-img"
-                          alt=""
-                        />
-                        <h3>Lia Na</h3>
-                        <h4>
-                          <i class="bi bi-star-fill"></i>
-                          <i class="bi bi-star-fill"></i>
-                          <i class="bi bi-star-fill"></i>
-                          <i class="bi bi-star-fill"></i>
-                          <i class="bi bi-star-fill"></i>
-                        </h4>
-                        <p>
-                          <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                          Alhamdulillah dengan adanya public speaking DIALOGIKA sangat bermanfaat sekali bagi sya , yg awalnya tidak bisa apa² , yg awalnya minder, malu, gk pd, takut dan sebagainya, alhamdulillah berkat ke tlatenan dri kk mentor dialogika , dikit
-                          <i
-                            class="bx bxs-quote-alt-right quote-icon-right"
-                          ></i>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                  <!-- End testimonial item -->
-
-                  <div class="swiper-slide">
-                    <div class="testimonial-wrap">
-                      <div class="testimonial-item">
-                        <img
-                          src="https://lh3.googleusercontent.com/a-/ALV-UjXdLXa4DjiqQXM-3Xjc7Wu_5P1IS0klsTQcC-RVDBtBEgy7X_k4=w75-h75-p-rp-mo-br100"
-                          class="testimonial-img"
-                          alt=""
-                        />
-                        <h3>Hatta Saifa</h3>
-                        <h4>
-                          <i class="bi bi-star-fill"></i>
-                          <i class="bi bi-star-fill"></i>
-                          <i class="bi bi-star-fill"></i>
-                          <i class="bi bi-star-fill"></i>
-                          <i class="bi bi-star-fill"></i>
-                        </h4>
-                        <p>
-                          <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                          Pub Speaking Class yang bisa dihadiri offline di Jogja, saya menjadi peserta kelas reguler di sini dan pengalaman saya selama menjadi peserta kelas alhamdulillah dipertemukan dengan kak vanny as a coach/mentor yang menyenangkan dan selalu antusias dalam berbagi ilmunya sebagai seorang expertise pub speaker. <span class="dots">...</span><span class="readMore"> Read More &raquo;</span><span class="moreText">Para pegawai yang ada di daheim pun  ramah-ramah juga dalam menyambut tiap peserta kelas. Overall menyenangkan dan membantu juga dalam memperdalam ilmu pub speaking dengan guarantee nya yang bisa tetap mengikuti kelas meskipun sudah dinyatakan lulus.
-                          Sedikit saran kalau ada yg perlu diperbaiki adalah mungkin pengadaaan kelas terpisah dengan ruang kerja para karyawan intern supaya para peserta kelas bisa lebih maksimal dalam menyerap ilmu yang disampaikan, juga responsibilitas admin kelas dalam menanggapi peserta kelas bisa lebih ditingkatkan, but overall sudah sangat cukup membantuu
-                          Thanks and good job buat kak vanny dan kaka-kaka Dialogika semuanyaa</span><span class="readLess"> &laquo; Read Less</span>
-                          <i
-                            class="bx bxs-quote-alt-right quote-icon-right"
-                          ></i>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                  <!-- End testimonial item -->
-                </div>
-                <div class="swiper-pagination"></div>
+    <section id="testimonials" class="testimonials">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3">
+            <div class="section-title" data-aos="fade-right">
+              <h5>Testimonials</h5>
+              <h3>Positive Feedback</h3>
+              <p class="text-start">
+                Semua testimonial yang ada disini adalah member yang mengikuti
+                kelas online, offline, anak dan juga program khusus korporasi,
+                silahkan check real feedbacknya di google review kami
+              </p>
+              <div class="text-center text-md-start" style="margin-top: 20px">
+                <a target="__blank"
+                  href="https://www.google.com/maps/place/Dialogika+Kelas+Public+Speaking/@-7.7552251,110.3760129,17z/data=!4m18!1m9!3m8!1s0x2e7a597ab489149d:0x9306a2474322de7c!2sDialogika+Kelas+Public+Speaking!8m2!3d-7.7552251!4d110.3785878!9m1!1b1!16s%2Fg%2F11qyjgv8c8!3m7!1s0x2e7a597ab489149d:0x9306a2474322de7c!8m2!3d-7.7552251!4d110.3785878!9m1!1b1!16s%2Fg%2F11qyjgv8c8?entry=ttu">Google
+                  Review</a>
               </div>
             </div>
           </div>
+          <div class="col-lg-9">
+            <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjWmfRrgY99qypYmm71eQHIo8n3fSsQhx7HVZ6EFfWC3CI-0N6DRfA=w75-h75-p-rp-mo-br100"
+                        class="testimonial-img" alt="" />
+                      <h3>Bestya R</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        sangat puas mengikuti kelas ini, dengan mentor yang berpengalaman dan mampu membangun vibes yang
+                        positif, meningkatkan kepercayaan diri dalam publik speaking dan motivatif.
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjXBTZz0kVrPeSzUevY_NohxKtq6ys-dACVN1_XV1ve50kZKsT0c=w120-h120-p-rp-mo-br100"
+                        class="testimonial-img" alt="" />
+                      <h3>Uwa pertiwi</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        The material used is very relevant to everyday social life. The mentors are also very good and
+                        the way they present it is very easy to understand. Continued success, dialog, thank you for the
+                        experience!
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjX58t0zlD0IvxW_683Svegixorhs-y9RUhIExZShYQ6K6v-Oec=w120-h120-p-rp-mo-br100"
+                        class="testimonial-img" alt="" />
+                      <h3>Lia Na</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        Alhamdulillah dengan adanya public speaking DIALOGIKA sangat bermanfaat sekali bagi sya , yg
+                        awalnya tidak bisa apa² , yg awalnya minder, malu, gk pd, takut dan sebagainya, alhamdulillah
+                        berkat ke tlatenan dri kk mentor dialogika , dikit
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjXdLXa4DjiqQXM-3Xjc7Wu_5P1IS0klsTQcC-RVDBtBEgy7X_k4=w75-h75-p-rp-mo-br100"
+                        class="testimonial-img" alt="" />
+                      <h3>Hatta Saifa</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        Pub Speaking Class yang bisa dihadiri offline di Jogja, saya menjadi peserta kelas reguler di
+                        sini dan pengalaman saya selama menjadi peserta kelas alhamdulillah dipertemukan dengan kak
+                        vanny as a coach/mentor yang menyenangkan dan selalu antusias dalam berbagi ilmunya sebagai
+                        seorang expertise pub speaker. <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span><span class="moreText">Para pegawai yang ada di daheim pun ramah-ramah juga
+                          dalam menyambut tiap peserta kelas. Overall menyenangkan dan membantu juga dalam memperdalam
+                          ilmu pub speaking dengan guarantee nya yang bisa tetap mengikuti kelas meskipun sudah
+                          dinyatakan lulus.
+                          Sedikit saran kalau ada yg perlu diperbaiki adalah mungkin pengadaaan kelas terpisah dengan
+                          ruang kerja para karyawan intern supaya para peserta kelas bisa lebih maksimal dalam menyerap
+                          ilmu yang disampaikan, juga responsibilitas admin kelas dalam menanggapi peserta kelas bisa
+                          lebih ditingkatkan, but overall sudah sangat cukup membantuu
+                          Thanks and good job buat kak vanny dan kaka-kaka Dialogika semuanyaa</span><span
+                          class="readLess"> &laquo; Read Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
         </div>
-      </section>
+      </div>
+    </section>
     <!-- End Testimonials Section -->
 
     <!-- ======= Mentor Section ======= -->
